# bitchute-scraper

./: .coveragerc  .gitignore  LICENSE  MAKEFILE  MANIFEST.in  README.md  TESTING.md  ___include.py  bc_collector.py  benchmark_details_fetching.py  cronjob.txt  debug_labels.py  debug_selectors.py  examples.ipynb  generate_tests.py  platform-analysis.md  pyproject.toml  pytest.ini  quick_test.py  requirements-dev.txt  requirements-test.txt  requirements.txt  run_tests.py  setup.cfg  setup.py  test_all_sections.py  test_bitchute_scraper.ipynb  test_bitchute_scraper.py  tests.py  tox.ini
.github/workflows/: tests.yml
bitchute/: INSTALLATION.md  __init__.py  bitchute.py  cli.py  core.py  download_manager.py  exceptions.py  models.py  token_manager.py  utils.py  validators.py
docs/: cli.rst  conf.py  index.rst  installation.rst  quickstart.rst
docs/api/: bitchute.rst  core.rst  models.rst  modules.rst
documentation/: website-analysis.md  website-structure-analysis.md
test_fixtures/: homepage.html  search.html  video.html
tests/: __init__.py  conftest.py  fixtures.py  helpers.py  test_cli.py  test_core.py  test_download_manager.py  test_exceptions.py  test_integration.py  test_integrations.py  test_models.py  test_performance.py  test_token_manager.py  test_utils.py  test_validators.py  test_video_download_integration.py
tests/fixtures/: mock_api_responses.json  mock_channel_data.json  mock_video_data.json
