[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools-scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "bitchute-scraper"
dynamic = ["version"]
description = "A modern, API-based package to scrape BitChute platform data."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Marcus Burkhardt", email = "marcus.burkhardt@gmail.com"}
]
maintainers = [
    {name = "Marcus Burkhardt", email = "marcus.burkhardt@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Video",
]
keywords = [
    "bitchute", "api", "scraper", "video", "data-collection", 
    "download", "media", "research", "social-media", "content-analysis",
    "web-scraping", "data-science", "automation", "bulk-download"
]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "python-dateutil>=2.8.0",
    "retrying>=1.3.0",
    "selenium>=4.10.0",
    "webdriver-manager>=3.8.0",
    "urllib3>=1.26.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
full = [
    "tqdm>=4.64.0",
    "pyarrow>=10.0.0",
    "psutil>=5.8.0",
    "pyyaml>=6.0",
]
progress = ["tqdm>=4.64.0"]
fast = ["pyarrow>=10.0.0"]
monitoring = ["psutil>=5.8.0"]
config = ["pyyaml>=6.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
    "types-python-dateutil>=2.8.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/bumatic/bitchute-scraper"
Repository = "https://github.com/bumatic/bitchute-scraper"
Documentation = "https://github.com/bumatic/bitchute-scraper/blob/main/README.md"
"Bug Reports" = "https://github.com/bumatic/bitchute-scraper/issues"
Changelog = "https://github.com/bumatic/bitchute-scraper/blob/main/CHANGELOG.md"

[project.scripts]
bitchute-scraper = "bitchute.cli:main"
bitchute = "bitchute.cli:main"

[tool.setuptools]
package-dir = {"" = "."}
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["bitchute*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
bitchute = ["*.txt", "*.md", "*.json", "*.yaml", "*.yml"]

[tool.setuptools_scm]
write_to = "bitchute/_version.py"

# ============================================================================
# TOOL CONFIGURATIONS
# ============================================================================

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["bitchute"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    ".tox",
    "docs",
]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "selenium.*",
    "webdriver_manager.*",
    "retrying.*",
    "tqdm.*",
    "pyarrow.*",
    "psutil.*",
    "yaml.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=bitchute",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests that require API access",
    "download: marks tests that download files",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["bitchute"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
    "*/setup.py",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]

[tool.doc8]
ignore-path = ["docs/_build", "*.egg-info"]
max-line-length = 88